# FTSE-100-Financial-Analysis

FTSE-100-Financial-Analysis/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DAILY_TIMELOG.csv  DASHBOARD_EXPORT_RUNBOOK.md  DATA_CONTRACTS.md  DATA_PROVIDERS.md  DATA_README.md  DECISIONS_LOG.md  KPI_CATALOGUE.md  LOGBOOK.md  MANIFEST.md  MEETING_NOTES.md  METRICS_LIBRARY.md  PROGRESS_LOG_DAILY.md  PROGRESS_LOG_WEEKLY.md  README.md  REFERENCE_DATA.md  RELEASE_CHECKLIST.md  REPO_AUDIT_LOG.md  SECURITY.md  STAKEHOLDER_COMMS_LOG.md  WEEKLY_HOURS.csv  pyproject.toml  requirements.txt  requirements_ui.txt  test.md
FTSE-100-Financial-Analysis/apps/: README.md  uk_market_terminal.py
FTSE-100-Financial-Analysis/config/: README.md  thresholds.yaml
FTSE-100-Financial-Analysis/docs/: 00_REPO_NAVIGATION.md  01_PORTFOLIO_WALKTHROUGH.md  02_UK_MARKET_CONTEXT.md  03_POWERBI_BUILD_GUIDE.md  04_DASHBOARD_DESIGN_SYSTEM.md  05_OPERATIONS_AND_MONITORING.md  06_DATA_GOVERNANCE_AND_LINEAGE.md  07_MODEL_CARDS.md
FTSE-100-Financial-Analysis/logs/: 00_LOGS_INDEX.md  README.md
FTSE-100-Financial-Analysis/scripts/: build_all.py  v1_build_all.py  v2_build_all.py  v2_export_from_marts.py
FTSE-100-Financial-Analysis/src/ftse100/: config.py  (+3 more)
FTSE-100-Financial-Analysis/tests/: test_repo_smoke.py
FTSE-100-Financial-Analysis/v1_dissertation_baseline/: CHANGELOG.md  HOURS_BREAKDOWN.csv  PROGRESS_LOG_DAILY.md  RISK_LOG.md  WEEKLY_HOURS.csv
FTSE-100-Financial-Analysis/v2_modernisation_realtime/: CHANGELOG.md  HOURS_BREAKDOWN.csv  LOGBOOK.md  PROGRESS_LOG_DAILY.md  WEEKLY_HOURS.csv
(+275 files in other folders)
